IECISASCANWEB: Ometre format de retorn del Perfil (https://github.com/GovernIB/pluginsib-scanweb/issues/8)

--- a/iecisa-scanweb-plugin/src/main/resources/iecisascanweb_es.properties
+++ b/iecisa-scanweb-plugin/src/main/resources/iecisascanweb_es.properties
@@ -1,4 +1,6 @@
 
+error.format=El formato del fichero recibido no es el esperado. Revise el Perfil del escaner y seleccione el formato {0}.
+notfound.error=Se ha realizado una petición al plugin [{0}] pero no se ha encontrodo ningún metodo para procesarla: {1}
 error.nofinestra=ERROR: No se puede mostrar la utilidad de escaneo en una ventana
 esperantservidor=Esperando al envio de documentos al servidor ...
 final=Continuar >>
