Permetre a l'usuari elegir safata d'entrada escàner TWAIN #9

--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
@@ -1,5 +1,6 @@
 dwt.dispositiu=Dispositivo
-dwt.error.validacio=Hay errores en el formulario. Rev\u00EDselos antes de enviar.
+dwt.safata=Bandeja entrada documento
+dwt.error.validacio=Hay errores en el formulario. Revíselos antes de enviar.
 dwt.color=Color
 dwt.resolucio=Resolución
 dwt.duplex=Duplex
@@ -9,10 +10,10 @@ dwt.error.upload=Se ha producido un error, y no se ha podido subir el documento 
 
 
 docspujats=Documentos subidos
-esperantservidor=Esperando al envio de documentos al servidor ...
-final=Continuar &gt;&gt;
+esperantservidor=Esperando al envío de documentos al servidor...
+final=Continuar >>
 llistatescanejats=Listado de Documentos Escaneados
-noenviats=No se ha enviado ningún documendo escaneado al servidor. Quiere salir?
+noenviats=No se ha enviado ningún documendo escaneado al servidor. ¿Quiere salir?
 pitja=Pulsa para Escanear
 pujarServidor=Subir al servidor
 rebut.1.fitxer=Se ha recibido <b>{0}</b> fichero
