Errors en Plugins quan es fa escaneig en Mode Asincron #10

--- a/filescan-plugin/src/main/resources/filescanweb_es.properties
+++ b/filescan-plugin/src/main/resources/filescanweb_es.properties
@@ -2,3 +2,6 @@
 selectfile=Seleccione un fichero
 cancelar=Cancelar
 acceptar=Aceptar
+
+final=Ha finalitzado el escaneo correctamente
+cancelat=El proceso de escaneo se ha cancelado
