--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
@@ -12,8 +12,10 @@ dwt.error.upload=Se ha producido un error, y no se ha podido subir el documento 
 docspujats=Documentos subidos
 esperantservidor=Esperando al envío de documentos al servidor...
 final=Continuar >>
+
 llistatescanejats=Listado de Documentos Escaneados
 noenviats=No se ha enviado ningún documendo escaneado al servidor. ¿Quiere salir?
+noenviats.error=No se ha enviado ningún documendo escaneado al servidor.
 pitja=Pulsa para Escanear
 pujarServidor=Subir al servidor
 rebut.1.fitxer=Se ha recibido <b>{0}</b> fichero
