--- a/digitalib-plugin/src/main/resources/digitalibscanweb_es.properties
+++ b/digitalib-plugin/src/main/resources/digitalibscanweb_es.properties
@@ -1,4 +1,6 @@
-selectfile=Seleccione un fichero
 cancelar=Cancelar
 acceptar=Aceptar
 finalproces=Final del proceso de escaneo
+
+plugindescan.seleccio.title=Selección del Perfil de Escaneo 
+plugindescan.seleccio.subtitle=Seleccione el perfil d´escaneo que quiera realizar
