DWT: Enviament metadades de document escanejat #15

--- a/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
+++ b/dynamicwebtwain/src/main/resources/dynamicwebtwain_es.properties
@@ -1,5 +1,5 @@
 dwt.dispositiu=Dispositivo
-dwt.safata=Bandeja entrada documento
+dwt.safata=Entrada documento
 dwt.error.validacio=Hay errores en el formulario. Revíselos antes de enviar.
 dwt.color=Color
 dwt.resolucio=Resolución
@@ -20,3 +20,47 @@ pitja=Pulsa para Escanear
 pujarServidor=Subir al servidor
 rebut.1.fitxer=Se ha recibido <b>{0}</b> fichero
 rebut.n.fitxers=Se han recibido <b>{0}</b> ficheros
+
+idioma=Idioma
+tipusdocumental=Tipo Documental
+
+TD01=Resolución (TD01)
+TD02=Acuerdo (TD02)
+TD03=Contrato (TD03)
+TD04=Convenio (TD04)
+TD05=Declaración (TD05)
+TD06=Comunicación (TD06)
+TD07=Notificación (TD07)
+TD08=Publicación (TD08)
+TD09=Justificante de recepción (TD09)
+TD10=Acta (TD10)
+TD11=Certificado (TD11)
+TD12=Diligencia (TD12)
+TD13=Informe (TD13)
+TD14=Solicitud (TD14)
+TD15=Denúncia (TD15)
+TD16=Alegación (TD16)
+TD17=Recurso (TD17)
+TD18=Comunicación al ciudadano (TD18)
+TD19=Factura (TD19)
+TD20=Otros confiscados (TD20)
+TD51=Ley. (TD51)
+TD52=Moción (TD52)
+TD53=Instrucción. (TD53)
+TD54=Convocatoria. (TD54)
+TD55=Orden del día. (TD55)
+TD56=Informe de Ponencia. (TD56)
+TD57=Dictamen de Comisión. (TD57)
+TD58=Iniciativa legislativa. (TD58)
+TD59=Pregunta. (TD59)
+TD60=Interpelación. (TD60)
+TD61=Respuesta. (TD61)
+TD62=Proposición no de ley. (TD62)
+TD63=Enmienda. (TD63)
+TD64=Propuesta de resolución. (TD64)
+TD65=Comparecencia. (TD65)
+TD66=Solicitud de información. (TD66)
+TD67=Escrito. (TD67)
+TD68=Iniciativa legislativa. (TD68)
+TD69=Petición. (TD69)
+TD99=Otros tipos de documentos (TD99)
