Adaptar tester a la nova API 4.0.0 #25

--- a/filescan-plugin/src/main/resources/filescanweb_es.properties
+++ b/filescan-plugin/src/main/resources/filescanweb_es.properties
@@ -5,3 +5,6 @@ acceptar=Aceptar
 
 final=Ha finalitzado el escaneo correctamente
 cancelat=El proceso de escaneo se ha cancelado
+
+error.noseleccionatfitxer=No ha seleccionado ningún fitxer. Vuelva a intentarlo
+error.tipusincorrecte=Ha seleccionado un fichero de tipo {0} y se requiere que sea de tipo {1}.
