--- a/iecisa-scanweb-plugin/src/main/resources/iecisascanweb_es.properties
+++ b/iecisa-scanweb-plugin/src/main/resources/iecisascanweb_es.properties
@@ -6,6 +6,7 @@ esperantservidor=Esperando al envio de documentos al servidor ...
 final=Continuar >>
 llistatescanejats=Listado de Documentos Escaneados
 noenviats=No se ha enviado ningún documendo escaneado al servidor. Quiere salir?
+noenviatcapdoc=No se ha enviado ningún documendo escaneado al servidor.
 pitja=Pulsa para Escanear
 rebut.1.fitxer=Se ha recibido <b>{0}</b> fichero
 rebut.n.fitxers=Se han recibido <b>{0}</b> ficheros
