--- a/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain_es.properties
+++ b/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain_es.properties
@@ -7,7 +7,10 @@ dwt.duplex=Duplex
 dwt.borra.actual=Borra actual
 dwt.borra.tot=Borra todo
 dwt.error.upload=Se ha producido un error, y no se ha podido subir el documento escaneado.
-
+dwt.instruccions.1=Introduce los documentos dentro del escáner.
+dwt.instruccions.2=Configura los seguientes parámetros de escaneo:
+dwt.instruccions.3=Escanea
+dwt.visualitzacio=Visualización previa
 
 docspujats=Documentos subidos
 esperantservidor=Esperando al envío de documentos al servidor...
