Problemàtica d'Escaneig de Documents diferents a A4 (PART 2) https://github.com/GovernIB/digitalib/issues/170

--- a/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain_es.properties
+++ b/dynamicwebtwain-plugin/src/main/resources/dynamicwebtwain_es.properties
@@ -1,5 +1,6 @@
 dwt.dispositiu=Dispositivo
 dwt.safata=Entrada documento
+dwt.pageSize=Tamaño de página
 dwt.error.validacio=Hay errores en el formulario. Revíselos antes de enviar.
 dwt.color=Color
 dwt.resolucio=Resolución
